--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ source:
 build:
   noarch: generic
   merge_build_host: True  # [win]
-  number: 1002
+  number: 1003
 
   rpaths:
     - lib/R/lib/
@@ -55,8 +55,9 @@ about:
     converted to black-and-white. They are also designed to be perceived by readers
     with the most common form of color blindness.
   license_family: MIT
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\MIT'  # [win]
+  license_file: 
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
+    - LICENSE
 
 extra:
   recipe-maintainers:
